cluster/deployments/ingresses/argocd-ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-argo-cd-argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: my-argo-cd-argocd-server
            port:
              number: https
  tls:
  - hosts:
    - myk8s.net
    secretName: argocd-secret # do not change, this is provided by Argo CD
